# EvolveUI

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  main.cpp  readme.md  src.qrc
EvolveUI/: CMakeLists.txt  Main.qml  main.cpp  src.qrc
EvolveUI/components/: Button.qml  CheckBox.qml  Dropdown.qml  HoverCard.qml  Input.qml  List.qml  RadioButton.qml  Slider.qml  SwitchButton.qml  Theme.qml  src.qrc
components/: Aboutme.qml  Accordion.qml  Avatar.qml  BlurCard.qml  Button.qml  Calendar.qml  Card.qml  CardWithTextArea.qml  Carousel.qml  CheckBox.qml  Clock.qml  DataTable.qml  EAccordion.qml  EAlertDialog.qml  EAnimatedWindow.qml  EAreaChart.qml  EAvatar.qml  EBarChart.qml  EButton.qml  ECalendar.qml  ECarousel.qml  ECheckBox.qml  EDataTable.qml  EDrawer.qml  EDropdown.qml  EHitokotoCard.qml  EInput.qml  EList.qml  ELoader.qml  EMenuButton.qml  EMusicPlayer.qml  EPieChart.qml  ERadioButton.qml  ESlider.qml  ESwitchButton.qml  ETheme.qml  EYearProgress.qml  HoverCard.qml  Input.qml  List.qml  (+7 more)
core/: music.cpp  music.h
pages/: BaseComponents.qml  NoBackgroundComponents.qml  OtherComponents.qml
scaffold/templates/basic/: CMakeLists.txt  FavoritesPage.qml  HomePage.qml  Main.qml  SettingsPage.qml  main.cpp
scaffold/templates/basic/pages/: FavoritesPage.qml  HomePage.qml  SettingsPage.qml
scaffold/templates/mobile/: CMakeLists.txt  Main.qml  main.cpp  package.bat
scaffold/templates/mobile/android/: AndroidManifest.xml  build.gradle
scaffold/templates/mobile/android/res/xml/: qtprovider_paths.xml
scaffold/templates/mobile/pages/: HomePage.qml  SearchPage.qml  SettingsPage.qml
scaffold/templates/productivity/: CMakeLists.txt  Main.qml
scaffold/templates/productivity/pages/: CalendarPage.qml  FavoritesPage.qml  HomePage.qml  ReportsPage.qml  SettingsPage.qml  TasksPage.qml
tools/: New-EvolveUIProject.bat  New-EvolveUIProject.ps1  New-EvolveUIProject.sh
